--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".NameScreen"
+            android:label="Get Name"
+            android:theme='@style/AppTheme'/>
     </application>
 
 </manifest>
